# ytIrTools

./: .gitignore  .gitignore.swp  AAServer.py  AutoAircon.py  AutoAirconServer.py  BbtTempSubscriber.py  BeebotteSubscriber.py  Dyson.py  IrAnalyze.py  IrConfig.py  IrRecv.py  IrSend.py  IrSendClient.py  IrSendCmdClient.py  IrSendCmdServer.py  IrSendServer.py  IrServer.py  IrWsServer.py  Mqtt.py  MqttSubscriber.py  MyLogger.py  PID_PIGPIOD=469  README.md  SampleServer.py  TcpCmdClient.py  TcpCmdServer.py  auto-aircon.py  ball-lamp.sh  boot-ir.sh  boot.sh  crontab.sample  dot.autoaircon  dot.autoaircon-param  dyson-temp.sh  dyson.sh  flows_ir-remocon1_cred.json  flows_rpi3-ir.json  flows_rpi3b-1.json  install-node-red.sh  ir-analyze  (+8 more)
irconf.d/: boe_picture.irconf  bose.irconf  candle.irconf  dyson_am05.irconf  dyson_hp04.irconf  fujitsu_aircon.irconf  hdmi.irconf  ir_dump.irconf  lamp.irconf  lg_tv.irconf  sharp_light.irconf  small_lamp.irconf  sony_bl.irconf  tv-light.irconf  tvlight.irconf
irdb.tk/: data_off  data_on  data_power
node-red/: flows_ir-remocon1-sample1.json  flows_rpi3b-1.json
old/: AutoAircon.py
pcb/ir01/: ir01.b#1  ir01.b#2  ir01.b#3  ir01.b#4  ir01.brd  ir01.pro  ir01.s#1  ir01.s#2  ir01.s#3  ir01.sch
pcb/ir02/: ir02.brd  ir02.sch
pcb/ir03/: ir03.brd  ir03.sch
uv/ir_analize/: pyproject.toml
uv/ir_analize/src/ir_analize/: __init__.py
