[project]
name = "ir-analize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
